fix contact background not showing

--- a/block/contact.css
+++ b/block/contact.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(/assets/image/contact-bg.png);
+    background-image: url(../assets/image/contact-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
